# ai-dev-template-backend-python

./: .env.example  .env.local  .env.local.example  .env.test  .pre-commit-config.yaml  .ruff.toml  .windsurfrules  README.md  TODOS.md  playwright.config.js  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.cursor/: mcp.json
.cursor/rules/: database-rls-security.mdc  fastapi-testing.mdc  git-commit.md  langgraph-async-patterns.mdc  langgraph-logging.mdc  langgraph-memory-management.mdc  langgraph-model-integration.mdc  langgraph-nodes-edges.mdc  langgraph-project-structure.mdc  langgraph-state-management.mdc  langgraph-tool-use.mdc  langgraph-type-safety.mdc  playwright-testing.mdc  python-code-style.mdc  python-project.mdc  supabase-security-hardening.mdc  supabase.mdc
.cursorrules/: supabase.mdc
docs/: supabase-setup.md
scripts/: check_all.sh  generate_windsurfrules.py  manage_local_supabase.sh  ruff_format_check.sh  setup_local_supabase.sh  start_dev_server.sh
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/database/: supabase.py
src/models/: __init__.py  auth.py
src/repositories/: base.py  user_settings.py
src/services/: auth_service.py
src/utils/: auth.py  logger.py  rate_limiter.py  supabase.py
supabase/: RESET_DATABASE.md  config.toml  seed.sql
supabase/migrations/: 20240401000000_initial_schema.sql  20250331203401_auto_create_user_settings.sql  20250423174800_ensure_rls_enabled.sql  20250425000000_consolidated_schema.sql  (+3 more)
tests/: conftest.py  run_all_tests.py  run_integration_tests.py
(+20 files in other folders)
