[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-template-backend"
version = "0.1.0"
description = "AI Development Template Backend"
authors = [
    {name = "", email = ""}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "langgraph>=0.0.20",
    "langchain>=0.0.335",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

[tool.setuptools]
packages = ["ai_dev_template_backend"]

[tool.ruff]
line-length = 88
target-version = "py39"
